--- a/1markup.html
+++ b/1markup.html
@@ -18,7 +18,7 @@
 </span>
     P tags are for paragraphs. Strong and em tags make text <strong>bold</strong> and <em>italic</em>, respectively. Likewise you can use sup and sub tags to make text <sup>superscript</sup>, or <sub>subscript</sub>, or q tags for short <q>quotes</q>.</p>    
 <blockquote>
-    You should use blockquote tags for long quatoations, <br>
+    You should use blockquote tags for long quotations, <br>
     a br tag for a line break, and an hr tag for a horizontal rule.<br>
     These are known as self-closing, because they don't have a closing tag.
 </blockquote>
